remove polymer dependency from dropdown in html. fix some layout issues

--- a/css/xkcd.css
+++ b/css/xkcd.css
@@ -11,7 +11,7 @@ body {
 /* Ensure the comic image resizes correctly. */
 
 #image img {
-    max-height: 463px;
+    max-height: 450px;
     max-width: 740px;
     height: auto;
     width: auto;
@@ -64,24 +64,12 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    height: 463px;
+    height: 450px;
 }
 
-
-/* Resize explain button icon*/
-
-#explain::shadow core-icon {
-    width: 30px;
-    height: 30px;
-}
-
-
-/* Align the explain button*/
-
-#explain {
+.mdl-textfield {
     position: relative;
-    top: -2px;
-    left: 3px;
+    bottom: 10px;
 }
 
 
@@ -122,60 +110,4 @@ so that it looks nicer. Otherwise there'd be a small protruding edge. */
 
 paper-toast {
     margin-left: -3px;
-}
-
-
-/* Resize history button icon*/
-
-#history::shadow core-icon {
-    width: 30px;
-    height: 30px;
-}
-
-
-/* Align the history button*/
-
-#history {
-    position: relative;
-    top: -2px;
-    right: 4px;
-}
-
-
-/* History dropdown sizing & alignment*/
-
-.dropdown {
-    display: table;
-    /* Set to table to force dropdown to wrap list items. */
-    bottom: 15px;
-    width: 190px;
-    max-width: 210px;
-    max-height: 330px;
-}
-
-.smallmenu {
-    overflow: hidden;
-    white-space: nowrap;
-    /* Do not wrap text to next line when it goes over. */
-    text-overflow: ellipsis;
-    /* Renders ellipsis when text is clipped. */
-    height: 30px;
-    /* Give each listing in history dropdown height of 30px. */
-}
-
-
-/* Remove margins in dropdown. */
-
-#historyMenu {
-    margin: 0;
-}
-
-
-/* Vertically center the text within the list. Accounts for paper-item
-   .button-content padding. */
-
-.smallmenu > div {
-    position: relative;
-    top: -10px;
-    font-size: 14px;
 }
